WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96576
Assert in NetscapePlugin::destroy() with async plugin init
https://bugs.webkit.org/show_bug.cgi?id=96576
Summary
Assert in NetscapePlugin::destroy() with async plugin init
Brady Eidson
Reported
2012-09-12 16:45:30 PDT
Assert in NetscapePlugin::destroy() with async plugin init This is with aysnc plug-in initialization enabled and when NPN_Invoke from within NPP_New ends up destroying the plug-in. In radar as <
rdar://problem/12277595
>
Attachments
Patch v1
(14.36 KB, patch)
2012-09-12 16:50 PDT
,
Brady Eidson
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-09-12 16:50:47 PDT
Created
attachment 163736
[details]
Patch v1
Brady Eidson
Comment 2
2012-09-12 17:17:49 PDT
http://trac.webkit.org/changeset/128388
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug