Assert in NetscapePlugin::destroy() with async plugin init <rdar://problem/12277595> and https://bugs.webkit.org/show_bug.cgi?id=96576

Reviewed by Anders Carlsson.

Source/WebKit2:

Most of the NPN_* API calls have a plug-in protector during the calls.
NPN_Invoke and NPN_InvokeDefault do not.

* WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:
(WebKit::NPN_Invoke): Protect the plug-in during this call.
(WebKit::NPN_InvokeDefault): Ditto.

Tools:

Expose NPN_Invoke to plug-in tests:
* DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:
(PluginTest::NPN_Invoke):
* DumpRenderTree/TestNetscapePlugIn/PluginTest.h:
(PluginTest):

Add a test that uses NPN_Invoke on the window object from inside NPP_New to remove the plug-in element:
* DumpRenderTree/TestNetscapePlugIn/Tests/InvokeDestroysPluginWithinNPP_New.cpp: Added.
(InvokeDestroysPluginWithinNPP_New):
(InvokeDestroysPluginWithinNPP_New::InvokeDestroysPluginWithinNPP_New):
(InvokeDestroysPluginWithinNPP_New::NPP_New):
* DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:

LayoutTests:

* platform/mac-wk2/plugins/destroy-during-async-npp-new-expected.txt: Added.
* platform/mac-wk2/plugins/destroy-during-async-npp-new.html: Added.

Canonical link: https://commits.webkit.org/114474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128388 268f45cc-cd09-0410-ab3c-d52691b4dbfc