Tools/DumpRenderTree/TestNetscapePlugIn/PluginTest.h
@@ -76,6 +76,7 @@ public:
     NPError NPN_GetURLNotify(const char* url, const char* target, void* notifyData);
     NPError NPN_GetValue(NPNVariable, void* value);
     void NPN_InvalidateRect(NPRect* invalidRect);
+    bool NPN_Invoke(NPObject *, NPIdentifier methodName, const NPVariant *args, uint32_t argCount, NPVariant *result);
     void* NPN_MemAlloc(uint32_t size);
 
     // NPRuntime NPN functions.
